--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<Title>Buttercup</title>
+			<Title>Finn The Human</title>
 			<link rel="stylesheet" type="text/css" href="index.css">
 		</head>
 
 	<body >
 		<div class="wrapper">
 	<header>
-		<h1>Buttercup</h1>
+		<h1>finn The Human</h1>
 			<img src="finn.gif">
 	</header>
 
 			<div class="content">
-		<h2>About Buttercup</h2>
+		<h2>About Finn</h2>
 			<p>Buttercup is a fictional character. A member of the Powerpuff Girls together with bubbles and blossom.Buttercup defines herself as a "tough hotheaded tomboy." Her personality ingredient is "spice", her signature color is green, and she has short black hair in a flip. She enjoys getting dirty, fighting hard, and playing rough; she does not plan ahead of time and is all action.
 			</p>
-	<h2>Buttercup's Characteristics</h2>
+	<h2>'s Characteristics</h2>
 	<ol>
 		<li>She's protective</li>
-		<li>Buttercup is good-hearted</li>
-		<li> Buttercup is independent </li>
+		<li>Finn is good-hearted</li>
+		<li> Finn is independent </li>
 	</ol>
 	
 	<div class="image1">
 		<img src="finnjake.jpeg"> 
 	</div>
 		<p class="caption" style="color: #050505">This is buttercup in action</p>
-		<h2> Buttercup friends</h2>
+		<h2> Finn friends</h2>
 		<ul>
 		<li><a
-			href="hTps://wreckitralph.fandom.com/wiki/Vanellope_von_Schweetz" target="_blank"
-			title="Visit Vanellope's page">Vanellope </a> from Wreck-it Ralph</li>
-			<li><a href="https://danielrivera123.github.io/WS02-MID1/"
-            target="_blank" title="Visit 's page">Daniel</a> Github Link</li>
-			<li><a href="https://danielrivera123.github.io/WS02-MID1/"
-			target="_blank" 3tle="Daniel's page">Daniel</a> from Adventure Time</li>
+			href="https://danielrivera123.github.io/WS02-MID1/" target="_blank"
+            3tle="https://danielrivera123.github.io/WS02-MID1/">Daniel Rvera </a> Githubl ink</li>
+            
+            <li><a href="https://howlscastle.fandom.com/wiki/Howl_Jenkins_Pendragon"
+            target="_blank" 3tle="Visit 's page">Wizard Howl</a> from Howls moving castle</li>
+
+            <li><a href="https://howlscastle.fandom.com/wiki/Markl."
+            target="_blank" 3tle="Visit Markl page'">Markl</a> from Howls moving castle</li>
 	</ul>
 		</div>
 			<footer>
 				<ul>
-				<li>Made by <a href="https://www.facebook.com/mack.pineda.946" target="_blank"
-				title="View Mack's FB account">Mack Andrei Pineda</a></li>
+				<li>Made by <a href="https://www.facebook.com/mikaella.anailuj" target="_blank"
+				title="View Mikaella's FB account">Mikaella Bustamante</a></li>
 				<li>&copy; 2023</li>
 				</ul>
 			</footer>
