--- a/index.html
+++ b/index.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<Title>Finn The Human</title>
+			<Title>Finn the Human</title>
 			<link rel="stylesheet" type="text/css" href="index.css">
 		</head>
-
-	<body >
+	<body>
 		<div class="wrapper">
 	<header>
-		<h1>finn The Human</h1>
 			<img src="finn.gif">
+			<h1>Finn the Human</h1>
 	</header>
-
 			<div class="content">
 		<h2>About Finn</h2>
-			<p>Buttercup is a fictional character. A member of the Powerpuff Girls together with bubbles and blossom.Buttercup defines herself as a "tough hotheaded tomboy." Her personality ingredient is "spice", her signature color is green, and she has short black hair in a flip. She enjoys getting dirty, fighting hard, and playing rough; she does not plan ahead of time and is all action.
+			<p>Finn is a kind, brave, selfless, and righteous boy. His aspirations to become a great hero makes him somewhat of a moral sheriff in the Land of Ooo.
 			</p>
-	<h2>'s Characteristics</h2>
+	<h2>Finn's characteristics</h2>
 	<ol>
-		<li>She's protective</li>
-		<li>Finn is good-hearted</li>
-		<li> Finn is independent </li>
+		<li>He's super cool</li>
+		<li>He has a strong sense of what is right and wrong.</li>
+		<li> He is always ready to lend a helping hand to a good cause.</li>
 	</ol>
-	
-	<div class="image1">
-		<img src="finnjake.jpeg"> 
-	</div>
-		<p class="caption" style="color: #050505">This is buttercup in action</p>
-		<h2> Finn friends</h2>
+		<img class="center" src="finnjake.jpeg">
+		<p class="caption">This is Batman in action</p>
+		<h2>Finn's friends</h2>
 		<ul>
 		<li><a
-			href="https://danielrivera123.github.io/WS02-MID1/" target="_blank"
-            3tle="https://danielrivera123.github.io/WS02-MID1/">Daniel Rvera </a> Githubl ink</li>
-            
-            <li><a href="https://howlscastle.fandom.com/wiki/Howl_Jenkins_Pendragon"
-            target="_blank" 3tle="Visit 's page">Wizard Howl</a> from Howls moving castle</li>
-
-            <li><a href="https://howlscastle.fandom.com/wiki/Markl."
-            target="_blank" 3tle="Visit Markl page'">Markl</a> from Howls moving castle</li>
+			href="https://danielrivera123.github.io/WS02-MID1/"
+                title="hhttps://danielrivera123.github.io/WS02-MID1/">Daniel Rivera </a> Github Link</li>
+                
+               <li><a href="https://geraldinewww.github.io/ITWS02-MID1/"
+                target="_blank" title="Visit Oneal Padrejuan page">Geraldine Adriano</a> Github Link</li>
+                <li><a href="https://adaaachi.github.io/WS02-MID1/"
+                target="_blank" title="Visit Oneal Padre Juan page'">Oneal Padre Jauan</a> Github Link</li>
+			target="_blank" 3tle="Visit Laryll's page">Jake</a> Github link</li>
 	</ul>
 		</div>
 			<footer>
 				<ul>
 				<li>Made by <a href="https://www.facebook.com/mikaella.anailuj" target="_blank"
-				title="View Mikaella's FB account">Mikaella Bustamante</a></li>
+				title="View Mikaella's FB page">Mikaella</a></li>
 				<li>&copy; 2023</li>
 				</ul>
 			</footer>
