--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
                 target="_blank" title="Visit Oneal Padrejuan page">Geraldine Adriano</a> Github Link</li>
                 <li><a href="https://adaaachi.github.io/WS02-MID1/"
                 target="_blank" title="Visit Oneal Padre Juan page'">Oneal Padre Jauan</a> Github Link</li>
-		
 	</ul>
 		</div>
 			<footer>
 				<ul>
-				<li>Made by <a href="https://www.facebook.com/mikaella.anailuj" target="_blank"
-				title="View Mikaella's FB page">Mikaella</a></li>
+				<li>Made by <a href="hTp://119.93.173.77:81/oes/" target="_blank"
+				title="View Ronron's FB page">Ronron</a></li>
 				<li>&copy; 2023</li>
 				</ul>
 			</footer>
