--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		</div>
 			<footer>
 				<ul>
-				<li>Made by <a href="hTp://119.93.173.77:81/oes/" target="_blank"
-				title="View Ronron's FB page">Ronron</a></li>
+				<li>Made by <a href="https://www.facebook.com/mikaella.anailuj" target="_blank"
+				title="View Mikaella's FB page">Mikaella</a></li>
 				<li>&copy; 2023</li>
 				</ul>
 			</footer>
