--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			href="https://danielrivera123.github.io/WS02-MID1/"
                 title="hhttps://danielrivera123.github.io/WS02-MID1/">Daniel Rivera </a> Github Link</li>
                 
-               <li><a href="https://mackandreipineda.github.io/WS02-MID1/"
-                target="_blank" title="Visit Oneal Padrejuan page">Geraldine Adriano</a> Github Link</li>
-                <li><a href="https://adaaachi.github.io/WS02-MID1/"
+               <li><a href="https://geraldinewww.github.io/WS02-MID1/"
+                target="_blank" title="Visit Geraldine page">Geraldine Adriano</a> Github Link</li>
+                <li><a href="https://mackandreipineda.github.io/WS02-MID1//"
                 target="_blank" title="Visit Oneal Padre Juan page'">Mack Andrei Pineda</a> Github Link</li>
 	</ul>
 		</div>
